# Daikin

./: .gitignore  CMakeLists.txt
Daikin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ConcreteCoolingDevice.cpp  ConcreteCoolingDevice.h  ConcreteHeatingDevice.cpp  ConcreteHeatingDevice.h  ConcreteTemperatureSensor.cpp  ConcreteTemperatureSensor.h  Daikin.cpp  Daikin.sln  Daikin.vcxproj  Daikin.vcxproj.filters  TemperatureController.cpp  TemperatureController.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/: CMakeLists.txt  ConcreteCoolingDevice.cpp  ConcreteCoolingDevice.h  ConcreteHeatingDevice.cpp  ConcreteHeatingDevice.h  ConcreteTemperatureSensor.cpp  ConcreteTemperatureSensor.h  TemperatureController.cpp  TemperatureController.h  api.cpp  api.h  main.cpp
tests/: CMakeLists.txt  MockCoolingDevice.h  MockHeatingDevice.h  MockTemperatureSensor.h  TemperatureControllerTests.cpp
